--- a/template/docs/pyproject.toml.jinja
+++ b/template/docs/pyproject.toml.jinja
@@ -7,9 +7,12 @@ name = "{{ project_name }}_docs"
 version = "0.0.0"
 description = "Docs."
 dependencies = [
+    # ? Core docs
+    "docutils==0.20.1",
     "linkify-it-py==2.0.3",
     "myst-nb==1.0.0",
     "nbformat==5.10.3",
+    "numpydoc==1.7.0",
     "ruamel-yaml==0.18.6",
     "sphinx-autobuild==2024.2.4",
     "sphinx-autodoc2==0.5.0",
@@ -46,7 +49,7 @@ ignore_unused = [
     "sphinx-togglebutton",
     "sphinxcontrib-bibtex",
     "sphinxcontrib-mermaid",
-    "sphinxcontrib-towncrier"
+    "sphinxcontrib-towncrier",
 ]
 [tool.fawltydeps.custom_mapping]
 ruamel-yaml = ["ruamel"]
