Fix things from boilercv sync

--- a/template/docs/conf.py.jinja
+++ b/template/docs/conf.py.jinja
@@ -1,43 +1,20 @@
 """Docs config."""
 
-import os
 from datetime import date
 from hashlib import sha256
-from os import environ
 from pathlib import Path
 
+from {{ project_name }}_docs import DOCS, PYPROJECT, chdir_docs
 from {{ project_name }}_docs.intersphinx import get_ispx, get_rtd, get_url
-from {{ project_name }}_docs.nbs import DOCS, init_nb_env
+from {{ project_name }}_docs.nbs import init_nb_env
 from {{ project_name }}_docs.types import IspxMappingValue
 from ruamel.yaml import YAML
 from sphinx.application import Sphinx
-
-
-def chdir_docs() -> Path:
-    """Ensure we are in the `docs` directory and return the root directory."""
-    path = Path().cwd()
-    if is_root(path.parent):
-        return path.parent
-    while not is_root(path):
-        if path == (path := path.parent):
-            raise RuntimeError("Either documentation or `pyproject.toml` is missing.")
-    os.chdir(path / "docs")
-    return path
-
-
-def is_root(path: Path) -> bool:
-    """Check if the path is the root of the project."""
-    return (path / "docs").exists() and (path / "pyproject.toml").exists()
-
 
 # ! Root
 ROOT = chdir_docs()
 """Root directory of the project."""
 # ! Paths
-PYPROJECT = ROOT / "pyproject.toml"
-"""Path to `pyproject.toml`."""
-DOCS = ROOT / "docs"
-"""Docs directory."""
 STATIC = DOCS / "_static"
 """Static assets folder, used in configs and setup."""
 CSS = STATIC / "local.css"
@@ -64,11 +41,7 @@ VERSION = ANS["project_version"]
 # ! Intersphinx and related
 ISPX_MAPPING: dict[str, IspxMappingValue] = {
     **{pkg: get_rtd(pkg) for pkg in ["myst_parser", "nbformat", "numpydoc"]},
-    **{pkg: get_rtd(pkg, latest=True) for pkg in ["pyqtgraph"]},
-    "numpy": get_url("numpy.org/doc"),
-    "matplotlib": get_url("matplotlib.org"),
     "pytest": get_url("docs.pytest.org/en"),
-    "cv2": get_ispx("docs.opencv.org/2.4"),
     "python": get_ispx("docs.python.org/3"),
     "pandas": get_ispx("pandas.pydata.org/docs"),
 }
@@ -87,7 +60,6 @@ REV = (
 )
 """Binder revision."""
 
-
 # ! Setup
 
 
@@ -97,27 +69,12 @@ def setup(app: Sphinx):
     app.connect("html-page-context", add_version_to_css)
 
 
-def init_nb_env():
-    """Initialize the environment which will be inherited for notebook execution."""
-    for key in [
-        key
-        for key in [
-            "PIP_DISABLE_PIP_VERSION_CHECK",
-            "PYTHONIOENCODING",
-            "PYTHONUTF8",
-            "PYTHONWARNDEFAULTENCODING",
-            "PYTHONWARNINGS",
-        ]
-        if environ.get(key) is not None
-    ]:
-        del environ[key]
-    environ["PYDEVD_DISABLE_FILE_VALIDATION"] = "1"
-
-
 def add_version_to_css(app: Sphinx, _pagename, _templatename, ctx, _doctree):
     """Add the version number to the local.css file, to bust the cache for changes.
 
-    See: https://github.com/executablebooks/MyST-Parser/blob/978e845543b5bcb7af0ff89cac9f798cb8c16ab3/docs/conf.py#L241-L249
+    See Also
+    --------
+    - https://github.com/executablebooks/MyST-Parser/blob/978e845543b5bcb7af0ff89cac9f798cb8c16ab3/docs/conf.py#L241-L249
     """
     if app.builder.name != "html":
         return
@@ -129,9 +86,12 @@ def add_version_to_css(app: Sphinx, _pagename, _templatename, ctx, _doctree):
 def dpaths(*paths: Path, rel: Path = DOCS) -> list[str]:
     """Get the string-representation of paths relative to docs for Sphinx config.
 
-    Args:
-        paths: Paths to convert.
-        rel: Relative path to convert to. Defaults to the 'docs' directory.
+    Parameters
+    ----------
+    paths
+        Paths to convert.
+    rel
+        Relative path to convert to. Defaults to the 'docs' directory.
     """
     return [dpath(path, rel) for path in paths]
 
@@ -139,9 +99,12 @@ def dpaths(*paths: Path, rel: Path = DOCS) -> list[str]:
 def dpath(path: Path, rel: Path = DOCS) -> str:
     """Get the string-representation of a path relative to docs for Sphinx config.
 
-    Args:
-        path: Path to convert.
-        rel: Relative path to convert to. Defaults to the 'docs' directory.
+    Parameters
+    ----------
+    path
+        Path to convert.
+    rel
+        Relative path to convert to. Defaults to the 'docs' directory.
     """
     return path.relative_to(rel).as_posix()
 
@@ -182,6 +145,7 @@ COMMON_OPTIONS = {
 }
 html_theme_options = {
     **COMMON_OPTIONS,
+    "navigation_with_keys": False,  # https://github.com/pydata/pydata-sphinx-theme/pull/1503
     "repository_branch": "main",
     "show_navbar_depth": 2,
     "show_toc_level": 4,
@@ -214,17 +178,31 @@ math_eqref_format = "Eq. {number}"
 mermaid_d3_zoom = False
 # ! Autodoc2
 nitpicky = True
-autodoc2_packages = [f"../src/{PACKAGE}"]
+autodoc2_packages = [
+    f"../src/{PACKAGE}",
+    f"{PACKAGE}_docs",
+    f"../scripts/{PACKAGE}_tools",
+    f"../tests/{PACKAGE}_tests",
+]
 autodoc2_render_plugin = "myst"
 # ? Autodoc2 does not currently obey `python_display_short_literal_types` or
 # ? `python_use_unqualified_type_names`, but `maximum_signature_line_length` makes it a
 # ? bit prettier.
 # ? https://github.com/sphinx-extensions2/sphinx-autodoc2/issues/58
-maximum_signature_line_length = 88
+maximum_signature_line_length = 1
+# ? Parse Numpy docstrings
+autodoc2_docstring_parser_regexes = [(".*", f"{PACKAGE}_docs.docstrings")]
 # ! Intersphinx
-intersphinx_mapping = {"python": ("https://docs.python.org/3", None)}
+intersphinx_mapping = ISPX_MAPPING
 nitpick_ignore = []
-nitpick_ignore_regex = []
+nitpick_ignore_regex = [
+    # ? Missing inventory
+    ("py:class", r"docutils\..+"),
+    ("py:class", r"numpydoc\.docscrape\..+"),
+    ("py:class", r"_pytest\..+"),
+    # ? TypeAlias: https://github.com/sphinx-doc/sphinx/issues/10785
+    ("py:class", rf"{PACKAGE}_docs\.docstrings\..*(?:SeeAlso|Section).*"),
+]
 # ! Tippy
 # ? https://sphinx-tippy.readthedocs.io/en/latest/index.html#confval-tippy_anchor_parent_selector
 tippy_anchor_parent_selector = "article.bd-article"
