--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -22,12 +22,7 @@ name = "{{ project_owner_name }}"
 
 [tool.coverage.run]
 branch = true
-source = [
-    "{{ project_name }}"
-    "{{ project_name }}_docs",
-    "{{ project_name }}_tests",
-    "{{ project_name }}_tools",
-    ]
+source = ["{{ project_name }}", "{{ project_name }}_docs", "{{ project_name }}_tests", "{{ project_name }}_tools"]
 [tool.coverage.report]
 ignore_errors = true
 [tool.fawltydeps]
@@ -70,7 +65,7 @@ name = "Changes"
 showcontent = true
 
 [tool.pyright]
-[
+exclude = [
     "**/node_modules",
     "**/__pycache__",
     "**/.*",
