Sync template with boilercv

--- a/template/docs/pyproject.toml.jinja
+++ b/template/docs/pyproject.toml.jinja
@@ -33,8 +33,8 @@ code = ["docs"]
 ignore_undeclared = [
     "{{ project_name }}",
     "{{ project_name }}_docs",
-    "{{ project_name }}_scripts",
     "{{ project_name }}_tests",
+    "{{ project_name }}_tools",
 ]
 ignore_unused = [
     # ? Core docs tools or declared as extensions in `conf.py`
