--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -16,6 +16,6 @@ code = ["scripts/{{ project_name }}_tools"]
 ignore_undeclared = [
     "{{ project_name }}",
     "{{ project_name }}_docs",
-    "{{ project_name }}_scripts",
     "{{ project_name }}_tests",
+    "{{ project_name }}_tools",
 ]
