--- a/template/tests/pyproject.toml.jinja
+++ b/template/tests/pyproject.toml.jinja
@@ -19,8 +19,8 @@ code = ["tests/{{ project_name }}_tests"]
 ignore_undeclared = [
     "{{ project_name }}",
     "{{ project_name }}_docs",
-    "{{ project_name }}_scripts",
     "{{ project_name }}_tests",
+    "{{ project_name }}_tools",
 ]
 ignore_unused = [
     # ? Core testung tools or plugins
