--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -26,7 +26,7 @@ source = [
     "{{ project_name }}",
     "{{ project_name }}_docs",
     "{{ project_name }}_tests",
-    "{{ project_name }}_tools"
+    "{{ project_name }}_tools",
 ]
 [tool.coverage.report]
 ignore_errors = true
