--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -42,7 +42,7 @@ jobs:
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1 -Lock -Version '{{ python_version }}'"
+      - run: "scripts/Sync-Py.ps1 -Version '{{ python_version }}'"
   spaces-in-path:
     strategy:
       matrix:
@@ -66,4 +66,4 @@ jobs:
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
       - working-directory: "repo path with spaces"
-        run: "scripts/Sync-Py.ps1 -Lock -Version '{{ python_version }}'"
+        run: "scripts/Sync-Py.ps1 -Version '{{ python_version }}'"
