--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -3,19 +3,10 @@
 from collections.abc import Collection
 from pathlib import Path
 from re import finditer
-from typing import NamedTuple
 
 from cyclopts import App
 
-from {{ project_name }}_tools.sync import (
-    COMPS,
-    PLATFORM,
-    VERSION,
-    escape,
-    get_all_comp_names,
-    get_comp_key,
-    synchronize,
-)
+from {{ project_name }}_tools.sync import CompPaths, escape, synchronize
 
 APP = App(help_format="markdown")
 """CLI."""
@@ -25,32 +16,10 @@ def main():  # noqa: D103
     APP()
 
 
-class Comp(NamedTuple):
-    """Dependency compilation."""
-
-    low: Path
-    """Path to the lowest direct dependency compilation."""
-    high: Path
-    """Path to the highest dependency compilation."""
-
-
 @APP.command
 def sync():
-    """Prepare a compilation.
-
-    Args:
-        get: Get the compilation rather than compile it.
-    """
-    COMPS.mkdir(exist_ok=True, parents=True)
-    for comp_names, comps in zip(get_all_comp_names(), synchronize(), strict=True):
-        comp_paths = Comp(
-            COMPS / f"{comp_names.low}.txt", COMPS / f"{comp_names.high}.txt"
-        )
-        platform, version = get_comp_key(comp_names.low).split("_")
-        if platform == PLATFORM and version == VERSION:
-            log(comp_paths)
-        for name, comp in zip(comp_names, comps, strict=True):
-            (COMPS / f"{name}.txt").write_text(encoding="utf-8", data=comp)
+    """Prepare a compilation."""
+    log(synchronize())
 
 
 @APP.command
@@ -62,8 +31,10 @@ def get_actions():
     paste the output of this command into the "Allow specified actions and reusable
     workflows" block.
 
-    Args:
-        high: Highest dependencies.
+    Parameters
+    ----------
+    high
+        Highest dependencies.
     """
     actions: list[str] = []
     for contents in [
@@ -81,7 +52,7 @@ def log(obj):
     match obj:
         case str():
             print(obj)  # noqa: T201
-        case Comp():
+        case CompPaths():
             for comp in obj:
                 log(comp)
         case Collection():
