--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -3,10 +3,12 @@
 from collections.abc import Collection
 from pathlib import Path
 from re import finditer
+from shlex import split
+from subprocess import run
 
 from cyclopts import App
 
-from {{ project_name }}_tools.sync import CompPaths, escape, synchronize
+from {{ project_name }}_tools.sync import CompPaths, escape, get_comps, synchronize
 
 APP = App(help_format="markdown")
 """CLI."""
@@ -17,9 +19,16 @@ def main():  # noqa: D103
 
 
 @APP.command
-def sync():
-    """Prepare a compilation."""
-    log(synchronize())
+def sync(high: bool = False):
+    """Sync."""
+    synchronize()
+    comps = get_comps()
+    run(
+        input=comps.high if high else comps.low,
+        args=split("bin/uv pip sync -"),
+        check=True,
+        text=True,
+    )
 
 
 @APP.command
