--- a/template/scripts/{{ project_name }}_tools/sync.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/sync.py.jinja
@@ -6,7 +6,6 @@ from pathlib import Path
 from platform import platform
 from re import finditer, search
 from shlex import quote, split
-from shutil import rmtree
 from subprocess import run
 from sys import version_info
 from typing import NamedTuple
@@ -65,13 +64,9 @@ VERSIONS: tuple[Version, ...] = (  # pyright: ignore[reportAssignmentType] 1.1.3
 )
 """Supported Python versions."""
 
-# ! Compilation and locking
-COMPS = Path(".comps")
-"""Platform-specific dependency compilations."""
+# ! Locking
 LOCK = Path("lock.json")
 """Locked set of dependency compilations for different runner/Python combinations."""
-LOCK_CONTENTS = loads(LOCK.read_text("utf-8")) if LOCK.exists() else {}
-"""Contents of the lock file."""
 
 # ! Checking
 UV_PAT = r"(?m)^# uv\s(?P<version>.+)$"
@@ -118,27 +113,7 @@ def get_comp_names(platform: Platform = PLATFORM, version: Version = VERSION) ->
     return Comp(base, sep.join([base, "high"]))
 
 
-def get_comp_paths(
-    platform: Platform = PLATFORM, version: Version = VERSION
-) -> CompPaths:
-    """Get names of a dependency compilation.
-
-    Parameters
-    ----------
-    platform
-        Platform to compile for.
-    version
-        Python version to compile for.
-    """
-    names = get_comp_names(platform, version)
-    return CompPaths(COMPS / f"{names.low}.txt", COMPS / f"{names.high}.txt")
-
-
-PLATFORM_COMP_PATHS = get_comp_paths(PLATFORM, VERSION)
-"""Paths to the dependency compilation for this platform and Python version."""
-
-
-def synchronize() -> CompPaths:  # noqa: PLR0911
+def synchronize():  # noqa: PLR0911
     """Sync dependencies. Prefer the existing compilation if compatible."""
     old = get_comps()
     if not old.low:
@@ -165,13 +140,8 @@ def synchronize() -> CompPaths:  # noqa: PLR0911
             continue
         return lock()  # Direct dependency missing
     low = comp(high=False, no_deps=False)
-    rmtree(COMPS, ignore_errors=True)
-    COMPS.mkdir(exist_ok=True, parents=True)
     if any(d not in low for d in old_directs):
         return lock()  # Direct dependency version mismatch
-    for old_comp, path in zip(old, get_comp_paths(), strict=True):
-        path.write_text(encoding="utf-8", data=old_comp)
-    return PLATFORM_COMP_PATHS
 
 
 def lock():
@@ -179,16 +149,13 @@ def lock():
     lock_contents: dict[str, str] = {}
     for platform in PLATFORMS:  # noqa: F402
         for version in VERSIONS:
+            names = get_comp_names(platform, version)
             comps = recompile(platform, version)
-            paths = get_comp_paths(platform, version)
-            for path, comp in zip(paths, comps, strict=True):
-                if platform == PLATFORM and version == VERSION:
-                    path.write_text(encoding="utf-8", data=comp)
-                lock_contents[get_comp_key(path.stem)] = comp
+            for name, comp in zip(names, comps, strict=True):
+                lock_contents[get_comp_key(name)] = comp
     LOCK.write_text(
         encoding="utf-8", data=dumps(indent=2, sort_keys=True, obj=lock_contents) + "\n"
     )
-    return PLATFORM_COMP_PATHS
 
 
 def recompile(platform: Platform = PLATFORM, version: Version = VERSION) -> Comp:
@@ -219,8 +186,9 @@ def get_comps(platform: Platform = PLATFORM, version: Version = VERSION) -> Comp
     """
     if not LOCK.exists():
         return Comp("", "")
+    contents = loads(LOCK.read_text("utf-8")) if LOCK.exists() else {}
     return Comp(*[
-        LOCK_CONTENTS.get(get_comp_key(name)) or ""
+        contents.get(get_comp_key(name)) or ""
         for name in get_comp_names(platform, version)
     ])
 
