--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -8,7 +8,7 @@ from subprocess import run
 
 from cyclopts import App
 
-from {{ project_name }}_tools.sync import CompPaths, escape, get_comps, synchronize
+from {{ project_name }}_tools.sync import escape, get_comps, synchronize
 
 APP = App(help_format="markdown")
 """CLI."""
@@ -61,9 +61,6 @@ def log(obj):
     match obj:
         case str():
             print(obj)  # noqa: T201
-        case CompPaths():
-            for comp in obj:
-                log(comp)
         case Collection():
             for o in obj:
                 log(o)
