--- a/template/.github/ISSUE_TEMPLATE/config.yml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/config.yml.jinja
@@ -1,5 +1,17 @@
 blank_issues_enabled: false
 contact_links:
-  - name: "Ask a question"
-    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=q-a"
+  - name: "🙏 Ask a question"
     about: "Ask for help. Please search related Q&As in case your question has been asked before."
+    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=q-a"
+  - name: "💡 Share an idea for a feature"
+    about: "Feature requests. Please search for existing similar discussions."
+    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=ideas"
+  - name: "📜 Share an idea for documentation"
+    about: "Suggestions for documentation or tutorial content. You're welcome to submit typo PRs without discussing it first! Please search for existing similar discussions."
+    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=ideas-for-docs"
+  - name: "⚙️ Share an idea for project infrastructure"
+    about: "Suggestions for project infrastructure and tooling. Please search for existing similar discussions."
+    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=ideas-for-infrastructure"
+  - name: "❔ Have something else in mind?"
+    about: "Please choose the most appropriate discussion category for your concern. Please search for existing similar discussions."
+    url: "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new/choose"
