--- a/template/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml.jinja
@@ -1,6 +1,6 @@
 name: "Documentation request"
 description: "Request documentation improvements"
-labels: ["docs"]
+labels: ["documentation"]
 body:
   - type: "checkboxes"
     id: "no-duplicate-issues"
