--- a/template/docs/index.md.jinja
+++ b/template/docs/index.md.jinja
@@ -1,7 +1,6 @@
-:::{include} ../README.md
-:relative-docs: docs/
-:relative-images:
-:::
+# {{ project_name }}
+
+{{ project_description }}
 
 :::{toctree}
 :hidden:
