Bundle code of conduct to fix links

--- a/template/.github/SECURITY.md.jinja
+++ b/template/.github/SECURITY.md.jinja
@@ -6,4 +6,4 @@ We only support the latest version, but we try to show `DeprecationWarning`s for
 
 ## Reporting a Vulnerability
 
-If you think you have found a vulnerability, please use [GitHub's security advisory form](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/advisories/new>). {% if project_email %} You may also email {{ project_owner_name }} at {{ project_email }}.{% endif %}
+If you think you have found a vulnerability, please use [GitHub's security advisory form](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/advisories/new>) {% if project_email %}or email {{ project_owner_name }} at <{{ project_email }}>{% endif %}.
